fix home theme layout bug

--- a/assets/sass/layouts/home.scss
+++ b/assets/sass/layouts/home.scss
@@ -126,7 +126,7 @@
 .home-themes-container {
     align-items: baseline;
     -webkit-align-items: baseline;
-    @media (max-width: 600px) {
+    @media (max-width: 800px) {
         flex-direction: column;
         -webkit-flex-direction: column;
         align-items: center;
